--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: Helvetica;
+  color: aliceblue;
+
+  margin: 0;
+  padding: 0;
+
+  background: linear-gradient(
+    180deg,
+    rgba(9, 35, 175, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
+
+button {
+  background-color: darkslateblue;
+  color: azure;
+
+  font-size: 1.2em;
+  font-weight: bold;
+  text-transform: uppercase;
+
+  height: 50px;
+  padding: 10px;
+
+  border: 2px solid #fff;
+  border-radius: 25px;
+
+  cursor: pointer;
+
+  transition: 0.4s;
+}
+
+button:hover {
+  background-color: indigo;
 }
